// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header Component renders Header 1`] = `
<style__Box
  between={2}
>
  <Heading
    data-test-id="heading-account"
    invert={false}
    level="h1"
  >
    Select an account
  </Heading>
</style__Box>
`;

exports[`Header Component renders Header for subscriber 1`] = `
<style__Box
  between={2}
>
  <Heading
    data-test-id="heading-subscriber"
    invert={false}
    level="h1"
  >
    Select a subscriber
  </Heading>
</style__Box>
`;

exports[`Header Component renders Header without rd params 1`] = `
<style__Box
  between={2}
>
  <Heading
    data-test-id="heading-account"
    invert={false}
    level="h1"
  >
    Select an account
  </Heading>
</style__Box>
`;
